    - Use the binary package version in Version.fetch_source() if the
      source version is not specified (i.e. in the normal case).
  * apt/progress/text.py:
    - Drop InstallProgress, it's useless to keep this alias around.
  * apt/progress/old.py:
    - Let the new method call the old one; e.g. status_update() now calls
      self.statusUpdate(). This improves compatibility for sub classes.

 -- Julian Andres Klode <jak@debian.org>  Mon, 01 Mar 2010 16:13:22 +0100

python-apt (0.7.93.3) unstable; urgency=low

  * data/templates/Ubuntu.info.in:
    - Use generic MirrorsFile key instead of per-architecture ones in
      order to fix FTBFS on !amd64 !i386 (Closes: #571752)

 -- Julian Andres Klode <jak@debian.org>  Sat, 27 Feb 2010 23:26:45 +0100

python-apt (0.7.93.2) unstable; urgency=low

  [ Julian Andres Klode ]
  * Fix some places where the old API was still used:
    - apt/utils.py: Completely ported, previous one was old-API from Ubuntu.
    - apt/cache.py: Use the new progress classes instead of the old ones.
    - apt/package.py: Various smaller issues fixed, probably caused by merge.
  * utils/migrate-0.8.py:
    - Improve C++ parsing and add apt.progress.old to the modules, reduces
      false positives.
    - Ship the list of deprecated things in the apt_pkg and apt_inst modules
      inside the script itself, so we don't have to parse the source code
      anymore.
  * python:
    - Handle deprecated attributes and methods in the tp_gettattro slot, this
      allows us to easily warn if a deprecated function is used.
  * python/tagfile.cc:
    - Implement the iterator protocol in TagFile.
  * python/cache.cc:
    - Implement Cache.__len__() and Cache.__contains__() (Closes: #571443).
  * data/templates/Debian.info.in:
    - Replace the MatchURI with one that really matches something.
  * aptsources/distro.py:
    - Call lsb_release with -idrc instead of --all.
  * tests:
    - Fix aptsources tests to use local data files if available.