@@ -1,2 +1,5 @@
 [BUILDDEB]
 native = True
+
+[HOOKS]
+pre-build = ./pre-build.sh
